--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-svg": "^11.0.10",
+    "redux": "^4.0.5",
     "uuid": "^3.4.0"
   },
   "scripts": {
@@ -48,6 +50,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-security": "^1.4.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "redux-logger": "^3.0.6"
   }
 }
