--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.3.1",
     "react-svg": "^11.0.10",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "uuid": "^3.4.0"
   },
   "scripts": {
