--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "acorn": "^7.1.1",
     "firebase": "^7.8.2",
+    "minimist": "^1.2.5",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -15,6 +17,7 @@
     "react-scripts": "3.3.1",
     "react-svg": "^11.0.10",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "uuid": "^3.4.0"
   },
