--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.1.0",
     "uuid": "^3.4.0"
   },
   "scripts": {
