--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-svg": "^11.0.10",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.1.0",
