--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "acorn": "^7.1.1",
+    "axios": "^0.19.2",
     "firebase": "^7.8.2",
     "minimist": "^1.2.5",
     "node-sass": "^4.13.1",
