--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,9 @@
     "client": "cd ../client && npm start",
     "server": "nodemon server.js",
     "build": "cd ../client && npm run build",
-    "dev": "concurrently --kill-others-on-fail \"npm server\" \"npm client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\" --names \"SERVER,CLIENT\"  -c \"bgBlue.bold,bgGreen.bold\" --prefix name",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd ../client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
